--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "serve-static": "1.13.2",
     "showdown": "1.8.5",
     "simplemde": "1.11.2",
-    "sortablejs": "1.7.0",
+    "sortablejs": "^1.7.0",
     "vue": "2.5.10",
     "vue-count-to": "1.0.13",
     "vue-i18n": "7.3.2",
